--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <p>Você também pode me encontrar nas redes sociais:</p>
         <ul class="social-links">
             <li><a href="https://www.linkedin.com/in/rafaelfmota/">LinkedIn</a></li>
-            <li><a href="https://www.linkedin.com/in/rafaelfmota/">GitHub</a></li>
+            <li><a href="https://github.com/Rmotadev">GitHub</a></li>
         </ul>
 
     </div>
