--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
             </li>
         </ul>
 
-        <p>Para ver mais projetos, visite meu <a href="https://www.linkedin.com/in/rafaelfmota/">GitHub</a>.</p>
+        <p>Para ver mais projetos, visite meu <a href="https://github.com/Rmotadev">GitHub</a>.</p>
     </div>
             
     
